@@ -1497,7 +1497,7 @@
 (defconst epackage-version "1.5"
   "Standard Emacs inversion.el supported verison number.")
 
-(defconst epackage--version-time "2013.0601.1550"
+(defconst epackage--version-time "2013.0601.1600"
   "Package's version number in format YYYY.MMDD.HHMM.")
 
 (defconst epackage--maintainer "jari.aalto@cante.net"
@@ -6331,9 +6331,15 @@ If optional VERBOSE is non-nil, display progress message."
   (let ((file (epackage-file-name-loader-boot)))
     (cond
      ((file-exists-p file)
-      (byte-compile-file file))
+      (let ((load-path load-path))
+	;; Set up load path to include all directories for
+	;; `require' commands etc.
+	(dolist (path (list (epackage-directory-install)
+			    (epackage-loader-file-insert-path-list)))
+	  (epackage-push path load-path))
+	(byte-compile-file file)))
      (verbose
-      (epackage-message "No boot loader file generated to byte compile.")))))
+      (epackage-message "No boot loader file found to byte compile.")))))
 
 ;;; Note really meant for user, but anyways....
 ;;;###autoload
